apps/baldsky/environments/homelab/worker.yaml
---
# Source: homelab/charts/baldsky/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baldsky-worker
  labels:
    helm.sh/chart: baldsky-0.2.0
    app.kubernetes.io/name: baldsky
    app.kubernetes.io/instance: baldsky-worker
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: baldsky
      app.kubernetes.io/instance: baldsky-worker
  template:
    metadata:
      labels:
        helm.sh/chart: baldsky-0.2.0
        app.kubernetes.io/name: baldsky
        app.kubernetes.io/instance: baldsky-worker
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: baldsky-worker
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: baldsky
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          image: "ghcr.io/kdwils/baldsky:sha-9bb83b7b699cb1be41702fa82a1e2ee3c2c02cc2"
          imagePullPolicy: IfNotPresent
          args:
            - serve
            - --config=/app/config.yaml
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/config.yaml
              name: configmap-worker-config
              readOnly: true
              subPath: config.yaml
      volumes:
        - configMap:
            name: worker-config
          name: configmap-worker-config
