apps/baldsky/environments/homelab/manifest.yaml
---
# Source: homelab/charts/baldsky/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baldsky
  labels:
    helm.sh/chart: baldsky-0.2.0
    app.kubernetes.io/name: baldsky
    app.kubernetes.io/instance: baldsky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: baldsky
    app.kubernetes.io/instance: baldsky
---
# Source: homelab/charts/baldsky/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baldsky
  labels:
    helm.sh/chart: baldsky-0.2.0
    app.kubernetes.io/name: baldsky
    app.kubernetes.io/instance: baldsky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: baldsky
      app.kubernetes.io/instance: baldsky
  template:
    metadata:
      labels:
        helm.sh/chart: baldsky-0.2.0
        app.kubernetes.io/name: baldsky
        app.kubernetes.io/instance: baldsky
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: baldsky
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: baldsky
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          image: "ghcr.io/kdwils/baldsky:sha-9bb83b7b699cb1be41702fa82a1e2ee3c2c02cc2"
          imagePullPolicy: IfNotPresent
          args:
            - serve
            - --config=/app/config.yaml
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /xrpc/_health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /xrpc/_health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/config.yaml
              name: configmap-api-config
              readOnly: true
              subPath: config.yaml
      volumes:
        - configMap:
            name: api-config
          name: configmap-api-config
---
# Source: homelab/charts/baldsky/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: baldsky
  labels:
    helm.sh/chart: baldsky-0.2.0
    app.kubernetes.io/name: baldsky
    app.kubernetes.io/instance: baldsky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "baldsky.kyledev.co"
    - "baldsky.int.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: baldsky
        port: 8080
        weight: 1
---
# Source: homelab/charts/baldsky/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: baldsky
  labels:
    helm.sh/chart: baldsky-0.2.0
    app.kubernetes.io/name: baldsky
    app.kubernetes.io/instance: baldsky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: baldsky
  extAuth:
    bodyToExtAuth:
      maxRequestBytes: 65536
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: crowdsec
        port: 8080
        weight: 1
